Drop Manage App

--- a/app/src/main/res/layout/activity_ap.xml
+++ b/app/src/main/res/layout/activity_ap.xml
@@ -11,7 +11,7 @@
         android:id="@+id/constraintLayout"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:background="@drawable/home_bar"
+        android:background="@drawable/ic_path_1"
         app:layout_constraintBottom_toTopOf="@+id/g2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -23,7 +23,7 @@
             android:id="@+id/textView3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="User Profile"
+            android:text="Product List"
             android:textColor="@color/white"
             android:textSize="25sp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -37,7 +37,7 @@
             android:layout_height="50sp"
 
             android:gravity="center"
-            android:paddingTop="10sp"
+            android:paddingTop="5sp"
 
             android:text="@string/loading"
             android:textSize="18sp"
@@ -84,7 +84,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:padding="5sp"
-        android:src="@drawable/button_add_new_pro"
+        android:src="@drawable/button_add_pro"
         app:layout_constraintBottom_toBottomOf="@id/g4"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
