--- a/app/src/main/res/layout/activity_abount.xml
+++ b/app/src/main/res/layout/activity_abount.xml
@@ -11,7 +11,7 @@
         android:id="@+id/linearLayout7"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:background="@drawable/home_bar"
+        android:background="@drawable/ic_path_1"
         android:gravity="center"
         android:orientation="vertical"
         app:layout_constraintBottom_toTopOf="@+id/g2"
@@ -48,7 +48,7 @@
             android:id="@+id/profile_image"
             android:layout_width="100dp"
             android:layout_height="100dp"
-            android:src="@drawable/propc"
+
              />
 
         <TextView
