--- a/app/src/main/res/layout/activity_cs.xml
+++ b/app/src/main/res/layout/activity_cs.xml
@@ -10,7 +10,7 @@
     <LinearLayout
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:background="@drawable/home_bar"
+        android:background="@drawable/ic_path_1"
         android:gravity="center"
         android:orientation="vertical"
         app:layout_constraintBottom_toTopOf="@+id/g2"
