--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -12,7 +12,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:padding="10dp"
-        android:background="@drawable/home_bar"
+        android:background="@drawable/ic_path_1"
 
 
         android:orientation="horizontal"
