--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,7 +5,7 @@
     android:id="@+id/load2"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-
+    android:background="#C5D6FF"
     tools:context=".login">
 
 
@@ -25,18 +25,19 @@
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/username_text_input_layout"
             android:layout_width="match_parent"
-
+            android:padding="5dp"
             android:layout_height="wrap_content">
 
             <EditText
                 android:id="@+id/lgn_email"
-
+                android:background="@drawable/input_draw"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="50dp"
                 android:layout_centerHorizontal="true"
                 android:layout_centerVertical="true"
                 android:layout_marginBottom="10sp"
                 android:ems="10"
+                android:paddingLeft="10dp"
                 android:hint="Email"
                 android:inputType="textPersonName" />
 
@@ -49,16 +50,18 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="20sp"
+            android:padding="5dp"
             app:passwordToggleEnabled="true">
 
             <EditText
                 android:id="@+id/lgn_pass"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-
+                android:background="@drawable/input_draw"
                 android:layout_centerHorizontal="true"
                 android:layout_centerVertical="true"
                 android:ems="10"
+                android:paddingLeft="10dp"
                 android:hint="Password"
                 android:inputType="textPassword" />
 
@@ -86,9 +89,9 @@
         <com.skydoves.elasticviews.ElasticImageView
             android:id="@+id/lgn_btn"
             android:layout_width="match_parent"
-            android:layout_height="75sp"
+            android:layout_height="50dp"
             android:layout_marginBottom="10sp"
-            android:padding="5sp"
+
             android:src="@drawable/button_login"
 
             app:layout_constraintBottom_toBottomOf="parent"
@@ -104,7 +107,7 @@
             android:layout_marginEnd="10sp"
             android:layout_marginBottom="10sp"
             android:text="Contact Developer"
-            android:textColor="@color/red" />
+            android:textColor="@color/black" />
 
 
     </LinearLayout>
@@ -126,19 +129,33 @@
         android:background="@drawable/ic_path_1"
         android:gravity="center"
         android:orientation="vertical"
+        android:weightSum="2"
         app:layout_constraintBottom_toTopOf="@+id/g2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@id/g1">
 
+        <ImageView
+            android:id="@+id/imageView11"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            app:srcCompat="@drawable/app" />
+
         <TextView
             android:id="@+id/textView9"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center"
+            android:padding="5dp"
+            android:visibility="gone"
             android:text="Login"
-            android:textColor="@color/white"
-            android:textSize="25sp" />
+            android:layout_weight="1"
+            android:background="@drawable/input"
+            android:textColor="@color/ic_launcher_background"
+            android:textSize="30sp" />
+
+
     </LinearLayout>
 
     <androidx.constraintlayout.widget.Guideline
