--- a/app/src/main/res/layout/activity_ao.xml
+++ b/app/src/main/res/layout/activity_ao.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-
+    android:background="#C5D6FF"
     tools:context=".ao">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -83,7 +83,7 @@
         android:id="@+id/act_ad_order"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:padding="5sp"
+        android:layout_marginBottom="5dp"
         android:src="@drawable/button_add_new_order"
         app:layout_constraintBottom_toBottomOf="@+id/g4"
         app:layout_constraintEnd_toEndOf="parent"
@@ -113,7 +113,7 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         app:layout_constraintGuide_begin="20dp"
-        app:layout_constraintGuide_percent="0.9" />
+        app:layout_constraintGuide_percent="0.92" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/g4"
