--- a/app/src/main/res/layout/activity_edit_order.xml
+++ b/app/src/main/res/layout/activity_edit_order.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:orientation="vertical"
-
+    android:background="#C5D6FF"
     android:layout_height="match_parent"
     tools:context=".edit_order">
 
@@ -20,7 +20,9 @@
         android:layout_marginTop="50sp"
         android:id="@+id/orderID"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
+        android:paddingLeft="10dp"
+        android:background="@drawable/input_draw"
         android:ems="10"
         android:maxLines="1"
         android:layout_marginRight="10sp"
@@ -32,8 +34,10 @@
     <EditText
         android:id="@+id/orderTitle"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
+        android:background="@drawable/input_draw"
         android:ems="10"
+        android:paddingLeft="10dp"
         android:maxLines="1"
         android:layout_marginRight="10sp"
         android:layout_marginLeft="10sp"
@@ -45,19 +49,27 @@
         android:id="@+id/contactDetails"
         android:layout_width="match_parent"
         android:layout_height="150sp"
+        android:background="@drawable/input_draw2"
         android:ems="10"
+        android:gravity="center_horizontal"
+        android:paddingTop="10dp"
+        android:paddingLeft="10dp"
+        android:textAlignment="textStart"
         android:layout_marginRight="10sp"
         android:layout_marginLeft="10sp"
         android:layout_marginBottom="20sp"
         android:inputType="textPersonName"
 
-        android:hint="Contact Details" />
+        android:hint="Contact Details"
+        tools:ignore="RtlCompat" />
 
     <EditText
         android:id="@+id/trackingNumber"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
+        android:background="@drawable/input_draw"
         android:ems="10"
+        android:paddingLeft="10dp"
         android:maxLines="1"
         android:layout_marginRight="10sp"
         android:layout_marginLeft="10sp"
@@ -68,8 +80,10 @@
     <EditText
         android:id="@+id/shippedDate"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
+        android:background="@drawable/input_draw"
         android:ems="10"
+        android:paddingLeft="10dp"
         android:maxLines="1"
         android:layout_marginRight="10sp"
         android:layout_marginLeft="10sp"
@@ -81,9 +95,11 @@
     <EditText
         android:id="@+id/completedDate"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
+        android:background="@drawable/input_draw"
         android:ems="10"
         android:maxLines="1"
+        android:paddingLeft="10dp"
         android:layout_marginRight="10sp"
         android:layout_marginLeft="10sp"
         android:layout_marginBottom="20sp"
