--- a/app/src/main/res/layout/activity_user_profile.xml
+++ b/app/src/main/res/layout/activity_user_profile.xml
@@ -5,6 +5,7 @@
     android:id="@+id/user_lay"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#C5D6FF"
     tools:context=".User_profile">
 
 
